--- a/static/css/member.css
+++ b/static/css/member.css
@@ -57,10 +57,12 @@
   position: relative;
 }
 .image {
+  display: inline-block;
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  object-fit: cover;
+  background-position: center center;
+  background-size: cover;
 }
 .edit {
   position: absolute;
